# RealTimeMessageChat

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.simple  LICENSE  README.md  build.sh  docker-compose.yml  vcpkg.json
.ProjectSample/: CMakeLists.txt
.go_lang/: README.txt  build.bat  build.sh  start.sh
.go_lang/Common/: go.mod  go.sum
.go_lang/Common/config/: config.go  rabbitmq.go  redis.go
.go_lang/MessageQueue/: .env  go.mod  main.go
.go_lang/MessageQueue/consumer/: consumer.go
.go_lang/RedisIO/: go.mod
.go_lang/RestAPI/: .env  go.mod  go.sum  main.go
.go_lang/RestAPI/handler/: handler.go
.go_lang/db_cli/: .env  go.mod  go.sum  main.go  pkg.sh
.go_lang/db_cli/cmd/: cli.go
.go_lang/db_cli/internal/db/: db.go
.go_lang/db_cli/internal/models/: user.go
.go_lang/db_cli/internal/server/: server.go
.go_lang/db_cli/internal/user/: user_service.go
CommonComponent/: CMakeLists.txt  Component.cpp  Component.hpp
CommonModule/: CMakeLists.txt  ClientCombinedMessageExecute.cpp  ClientCombinedMessageExecute.h  ClientCombinedMessageParsing.cpp  ClientCombinedMessageParsing.h  ClientHeader.h  ClientMessageExecute.cpp  ClientMessageExecute.h  ClientMessageParsing.cpp  ClientMessageParsing.h  DBWorker.cpp  DBWorker.h  ModuleHeader.hpp  ServerCombinedMessageExecute.cpp  ServerCombinedMessageExecute.h  ServerCombinedMessageParsing.cpp  ServerCombinedMessageParsing.h  ServerHeader.h  ServerMessageExecute.cpp  ServerMessageExecute.h  ServerMessageParsing.cpp  ServerMessageParsing.h
MainServer/: CMakeLists.txt  Configurations.cpp  Configurations.h  DBClient.cpp  DBClient.h  DBPeriodicUpdateJob.cpp  DBPeriodicUpdateJob.h  MainServer.cpp  MainServer.h  MainServerConsumeJob.cpp  MainServerConsumeJob.h  UserClientManager.cpp  UserClientManager.h  main.cpp  main_server_configurations.json
MainServerConsumer/: CMakeLists.txt  Configurations.cpp  Configurations.h  MainServerConsumer.cpp  MainServerConsumer.h  MessageCallbacks.cpp  MessageCallbacks.h  main.cpp  main_server_consumer_configurations.json
RestAPI/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  go.mod  go.sum
RestAPI/cmd/server/: main.go
RestAPI/config/: api_server_config.json
RestAPI/docs/: docs.go  swagger.json  swagger.yaml
RestAPI/internal/app/: container.go
RestAPI/internal/config/: config.go  config_test.go
RestAPI/internal/handlers/: message_handler.go  message_handler_extended.go  system_handler.go  user_handler.go
RestAPI/internal/infrastructure/: interfaces.go
RestAPI/internal/middleware/: auth.go  logger.go  metrics.go  rate_limiter.go  request_id.go
RestAPI/internal/models/: message.go
RestAPI/internal/repository/: message_repository.go  user_repository.go  user_repository_test.go
RestAPI/internal/service/: interfaces.go  message_service.go  user_service.go  user_service_test.go
RestAPI/internal/services/: database.go  rabbitmq.go  redis.go
RestAPI/pkg/cache/: keys.go  ttl.go
RestAPI/pkg/errors/: errors.go
RestAPI/pkg/logger/: logger.go
RestAPI/pkg/pagination/: pagination.go
RestAPI/pkg/response/: response.go
RestAPI/pkg/validator/: validator.go
UserClient/: CMakeLists.txt  Configurations.cpp  Configurations.h  UserClient.cpp  UserClient.h  main.cpp  user_client_configurations.json
database/: README.md  schema.sql
docker/: Dockerfile  README.md  build.sh  clean.sh  consumer-entrypoint.sh  docker-compose.sh  docker-compose.yml  logs.sh  mainserver-entrypoint.sh  publish-message.sh  run-client.sh  start.sh  status.sh  stop.sh
docker/config/: api_server_config.json  main_server_configurations.json  main_server_consumer_configurations.json  user_client_configurations.json
scripts/: generate_encryption_keys.cpp
tests/: README.md  test-integration.sh  test-local.sh
